@startuml
class User {
    + int userID      
    + String name
    + String email
    + String location
    + List<Hobby> hobbies
    + sendMessage()
    + addHobby()
}

class Hobby {
    + int hobbyID     
    + String hobbyName
    + String description
    + int ownerID    
}

class Message {
    + int messageID   
    + int senderID    
    + int receiverID  
    + String content
    + sendMessage()
}

class HobbyLobbySystem {
    + List<User> users
    + List<Hobby> hobbies
    + matchUsers()
    + storeReview()
}

User --> Hobby : owns >
User --> Message : sends >
HobbyLobbySystem --> User : manages >
HobbyLobbySystem --> Hobby : organizes >

@enduml
